[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/new_card_game/ActionsMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/core/Pile.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/new_card_game/Deck.gd" type="Script" id=4]
[ext_resource path="res://src/new_card_game/Board.gd" type="Script" id=5]
[ext_resource path="res://src/new_card_game/FieldPlacementGrid.tscn" type="PackedScene" id=8]
[ext_resource path="res://themes/darktheme/darktheme.theme" type="Theme" id=12]
[ext_resource path="res://src/new_card_game/Player2.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/new_card_game/Player1.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/new_card_game/Hand1.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/new_card_game/Hand2.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/new_card_game/TurnQueue.gd" type="Script" id=17]
[ext_resource path="res://src/core/Hand.gd" type="Script" id=20]
[ext_resource path="res://src/new_card_game/GameOverPanel.tscn" type="PackedScene" id=23]

[node name="Board" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
mouse_filter = 2
theme = ExtResource( 12 )
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.203922, 0.254902, 0.156863 )

[node name="FieldContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -238.5
margin_right = 312.0
margin_bottom = 238.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="FieldContainer"]
margin_top = 31.0
margin_right = 624.0
margin_bottom = 31.0

[node name="FieldHBox2" type="HBoxContainer" parent="FieldContainer"]
margin_top = 34.0
margin_right = 624.0
margin_bottom = 230.0
grow_vertical = 2

[node name="FieldGrid2" parent="FieldContainer/FieldHBox2" groups=["field"] instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 624.0
margin_bottom = 196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="FieldContainer"]
margin_top = 233.0
margin_right = 624.0
margin_bottom = 243.0
rect_min_size = Vector2( 0, 10 )

[node name="FieldHBox1" type="HBoxContainer" parent="FieldContainer"]
margin_top = 246.0
margin_right = 624.0
margin_bottom = 442.0
grow_horizontal = 2
grow_vertical = 2

[node name="FieldGrid1" parent="FieldContainer/FieldHBox1" groups=["field"] instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 624.0
margin_bottom = 196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="FieldContainer"]
margin_top = 445.0
margin_right = 624.0
margin_bottom = 445.0

[node name="TurnQueue" type="Node2D" parent="."]
script = ExtResource( 17 )

[node name="Player1" parent="TurnQueue" instance=ExtResource( 14 )]

[node name="Player2" parent="TurnQueue" instance=ExtResource( 13 )]

[node name="Deck" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 475 )
script = ExtResource( 4 )
placement = 5

[node name="VBoxContainer" parent="Deck/Control/CenterContainer" index="0"]
margin_top = 79.0
margin_right = 0.0
margin_bottom = 79.0

[node name="Label" parent="Deck/Control/CenterContainer/VBoxContainer" index="0"]
visible = false
margin_right = 68.0

[node name="PanelContainer" parent="Deck/Control/CenterContainer/VBoxContainer" index="1"]
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="CenterContainer" parent="Deck/Control/CenterContainer/VBoxContainer/PanelContainer" index="0"]
margin_right = 0.0
margin_bottom = 0.0

[node name="CardCount" parent="Deck/Control/CenterContainer/VBoxContainer/PanelContainer/CenterContainer" index="0"]
visible = false
margin_left = -11.0
margin_top = -15.0
margin_right = 11.0
margin_bottom = 14.0

[node name="View" parent="Deck/Control/ManipulationButtons" index="0"]
margin_right = 26.0
margin_bottom = 27.0

[node name="ViewSorted" parent="Deck/Control/ManipulationButtons" index="1"]
margin_top = 30.0
margin_right = 26.0
margin_bottom = 57.0

[node name="Shuffle" parent="Deck/Control/ManipulationButtons" index="2"]
margin_top = 60.0
margin_right = 26.0
margin_bottom = 87.0

[node name="CardView" parent="Deck/ViewPopup" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 6.0
margin_bottom = 6.0

[node name="Position" parent="Deck/Debug" index="0"]
margin_bottom = 27.0

[node name="AreaPos" parent="Deck/Debug" index="1"]
margin_top = 30.0
margin_bottom = 57.0

[node name="Size" parent="Deck/Debug" index="2"]
margin_top = 60.0
margin_bottom = 87.0

[node name="Hand1" parent="." instance=ExtResource( 15 )]
z_index = 100
script = ExtResource( 20 )
placement = 7

[node name="Control" parent="Hand1" index="0"]
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0

[node name="Cards" parent="Hand1/Counters" index="0"]
visible = true

[node name="Hand2" parent="." instance=ExtResource( 16 )]
script = ExtResource( 20 )
card_size = Vector2( 150, 200 )
excess_discard_pile_name = ""
excess_cards = 0

[node name="Control" parent="Hand2" index="0"]
anchor_left = 0.5
anchor_right = 0.5

[node name="ScalingFocusOptions" type="OptionButton" parent="."]
visible = false
margin_left = -1.33484
margin_top = 44.0497
margin_right = 187.665
margin_bottom = 84.0497
disabled = true
toggle_mode = false
text = "Scaling + Viewport Focus"
items = [ "Scaling Focus", null, false, 0, null, "Viewport Focus", null, false, 1, null, "Scaling + Viewport Focus", null, false, 2, null, "Scaling + Info Panels", null, false, 3, null ]
selected = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReshuffleAllDeck" type="Button" parent="."]
visible = false
margin_left = 9.89948
margin_top = 116.762
margin_right = 200.899
margin_bottom = 136.762
text = "Reshuffle all cards into deck"

[node name="OvalHandToggle" type="CheckButton" parent="."]
visible = false
margin_left = 405.31
margin_top = 1.12245
margin_right = 594.31
margin_bottom = 41.1225
text = "Oval Hand Shape"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit Game" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 25.0
margin_right = -10.0
margin_bottom = 90.0
text = "Exit Game"
icon_align = 1

[node name="Debug" type="CheckButton" parent="."]
visible = false
margin_left = 789.192
margin_top = 3.36737
margin_right = 978.192
margin_bottom = 43.3674
pressed = true
text = "Debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionsMenu" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -309.0
margin_top = -45.0
margin_right = 226.0
margin_bottom = 45.0
focus_mode = 1

[node name="HBoxContainer" parent="ActionsMenu/VBoxContainer" index="1"]
margin_top = 8.0
margin_bottom = 82.0

[node name="MarginContainer2" parent="ActionsMenu/VBoxContainer/HBoxContainer" index="1"]
margin_bottom = 74.0

[node name="CancelButton" parent="ActionsMenu/VBoxContainer/HBoxContainer" index="2"]
margin_left = 280.0
margin_right = 455.0
margin_bottom = 74.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="GameOverPanel" parent="CanvasLayer" instance=ExtResource( 23 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -75.0
margin_right = 225.0
margin_bottom = 75.0

[connection signal="game_won" from="TurnQueue" to="CanvasLayer/GameOverPanel" method="_on_game_won"]
[connection signal="is_empty" from="Deck" to="." method="_on_Deck_is_empty"]
[connection signal="gui_input" from="Deck/Control" to="TurnQueue/Player1" method="_on_DeckPanel_gui_input"]
[connection signal="item_selected" from="ScalingFocusOptions" to="." method="_on_ScalingFocusOptions_item_selected"]
[connection signal="pressed" from="ReshuffleAllDeck" to="." method="_on_ReshuffleAllDeck_pressed"]
[connection signal="toggled" from="OvalHandToggle" to="." method="_on_OvalHandToggle_toggled"]
[connection signal="pressed" from="Exit Game" to="." method="_on_BackToMain_pressed"]
[connection signal="toggled" from="Debug" to="." method="_on_Debug_toggled"]

[editable path="Deck"]
[editable path="Hand1"]
[editable path="Hand2"]
[editable path="ActionsMenu"]
